--- a/frontend/src/frontend/App.css
+++ b/frontend/src/frontend/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
